--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>elasticsearch-java</artifactId>
 		</dependency>
 
+		<dependency>
+		<groupId>org.springframework.data</groupId>
+		<artifactId>spring-data-elasticsearch</artifactId>
+	</dependency>
+
 		<!--<dependency>
 			<groupId>org.opensearch.client</groupId>
 			<artifactId>opensearch-rest-high-level-client</artifactId>
