operations on datetime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-elasticsearch.host=localhost
+#elasticsearch.host=localhost
 elasticsearch.port=9200
 elasticsearch.username=
 elasticsearch.password=
 elk-index= partial_search
+spring.elasticsearch.uris=13.202.150.198:9200
